--- a/x-password-indicator/demo/index.html
+++ b/x-password-indicator/demo/index.html
@@ -14,10 +14,9 @@
     </main>
     <script type="module">
         import XPasswordIndicator from "../x-password-indicator.js";
-        const $indicator = new XPasswordIndicator();
         import XToast from "../../x-toast/x-toast.js";
-        const $toast = new XToast();
-        $indicator.addEventListener('x-password-indicator', e => $toast.show(`${e.type}: ${e.detail}`));
+        const $indicator = new XPasswordIndicator();
+        $indicator.addEventListener('x-password-indicator', e => XToast.show(`${e.type}: ${e.detail}`));
     </script>
 </body>
 
