--- a/x-pinpad/demo/success.html
+++ b/x-pinpad/demo/success.html
@@ -19,8 +19,8 @@
     <script type="module">
         import XPinpad from "../x-pinpad.js";
         const $pinpad = new XPinpad();
-        // simulate fail
-        addEventListener('x-pin', e => $pinpad.onPinIncorrect());
+        // simulate success
+        addEventListener('x-pin', e => $pinpad.close());
     </script>
 </body>
 
