x-address-input: viewport info; todos

--- a/x-address-input/demo/index.html
+++ b/x-address-input/demo/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>x-address-input demo</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+    <meta name="viewport" content="target-densitydpi=device-dpi,user-scalable=0,minimum-scale=1,maximum-scale=1,initial-scale=1">
     <link href="../x-address-input.css" rel="stylesheet">
     <link href="../../x-toast/x-toast.css" rel="stylesheet">
 </head>
