--- a/screen-backup-phrase-import/demo/index.html
+++ b/screen-backup-phrase-import/demo/index.html
@@ -3,23 +3,21 @@
 
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-    <link href="../view-backup-phrase-import.css" rel="stylesheet">
+    <link href="../screen-backup-phrase-import.css" rel="stylesheet">
 </head>
 
 <body>
-    <main>
-        <view-backup-phrase-import></view-backup-phrase-import>
-    </main>
+    <screen-backup-phrase-import></screen-backup-phrase-import>
     <script type="module">
-    import ViewBackupPhraseImport from '../view-backup-phrase-import.js';
+    import ScreenBackupPhraseImport from '../screen-backup-phrase-import.js';
     import MnemonicPhrase from '/library/mnemonic-phrase/mnemonic-phrase.es6.min.js';
 
-    const $view = new ViewBackupPhraseImport();
+    const $screen = new ScreenBackupPhraseImport();
 
     const randomKey = window.crypto.getRandomValues(new Uint8Array(32));
-    $view.privateKey = MnemonicPhrase._arrayToHex(randomKey);
+    $screen.privateKey = MnemonicPhrase._arrayToHex(randomKey);
 
-    $view.addEventListener('x-import', () => {
+    $screen.addEventListener('x-import', () => {
         console.log('Event "import" fired');
     });
     </script>
