--- a/screen-backup-phrase-validate/demo/index.html
+++ b/screen-backup-phrase-validate/demo/index.html
@@ -3,23 +3,23 @@
 
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-    <link href="../view-backup-phrase-validate.css" rel="stylesheet">
+    <link href="../screen-backup-phrase-validate.css" rel="stylesheet">
 </head>
 
 <body>
     <main>
-        <view-backup-phrase-validate></view-backup-phrase-validate>
+        <screen-backup-phrase-validate></screen-backup-phrase-validate>
     </main>
     <script type="module">
-    import ViewBackupPhraseValidate from '../view-backup-phrase-validate.js';
+    import ScreenBackupPhraseValidate from '../screen-backup-phrase-validate.js';
     import MnemonicPhrase from '/library/mnemonic-phrase/mnemonic-phrase.es6.min.js';
  
-    const $view = new ViewBackupPhraseValidate();
+    const $screen = new ScreenBackupPhraseValidate();
 
     const randomKey = window.crypto.getRandomValues(new Uint8Array(32));
-    $view.privateKey = MnemonicPhrase._arrayToHex(randomKey);
+    $screen.privateKey = MnemonicPhrase._arrayToHex(randomKey);
 
-    $view.addEventListener('x-validated', () => {
+    $screen.addEventListener('x-validated', () => {
         console.log('Event "validated" fired');
     });
     </script>
