--- a/screen-recipient/demo/index.html
+++ b/screen-recipient/demo/index.html
@@ -3,8 +3,7 @@
 
 <head>
     <title>Nimiq Address Pages</title>
-    <meta name="viewport" content="target-densitydpi=device-dpi,user-scalable=0,minimum-scale=1,maximum-scale=1,initial-scale=1">
-
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <link href="../screen-recipient.css" rel="stylesheet">
     <link href="/elements/x-toast/x-toast.css" rel="stylesheet">
 </head>
