--- a/screen-identicons/demo/index.html
+++ b/screen-identicons/demo/index.html
@@ -10,11 +10,11 @@
     <screen-identicons></screen-identicons>
     <x-nimiq-api></x-nimiq-api>
     <script type="module">
-    import ViewIdenticons from '../screen-identicons.js';
+    import ScreenIdenticons from '../screen-identicons.js';
     import XNimiqApi from '../../x-nimiq-api/x-nimiq-api.js';
-    const $view = new ViewIdenticons();
+    const $screen = new ScreenIdenticons();
     const $api = new XNimiqApi();
-    $api.addEventListener('x-api-ready', event => $view.onApiReady(event.detail));
+    $api.addEventListener('x-api-ready', event => $screen.onApiReady(event.detail));
     </script>
 </body>
 
