--- a/screen-identicons/demo/index.html
+++ b/screen-identicons/demo/index.html
@@ -13,6 +13,7 @@
     import ScreenIdenticons from '../screen-identicons.js';
     import XNimiqApi from '../../x-nimiq-api/x-nimiq-api.js';
     const $screen = new ScreenIdenticons();
+    $screen.visible = true;
     const $api = new XNimiqApi();
     $api.addEventListener('x-api-ready', event => $screen.onApiReady(event.detail));
     </script>
