--- a/x-pinpad/demo/index.html
+++ b/x-pinpad/demo/index.html
@@ -19,6 +19,7 @@
     <script type="module">
         import XPinpad from "../x-pinpad.js";
         const $pinpad = new XPinpad();
+        $pinpad.open();
         // simulate fail
         addEventListener('x-pin', e => $pinpad.onPinIncorrect());
     </script>
