--- a/x-qr-file-input/demo/index.html
+++ b/x-qr-file-input/demo/index.html
@@ -5,6 +5,7 @@
     <title>x-qr-file-input demo</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <link href="../x-qr-file-input.css" rel="stylesheet">
+    <link href="../../x-screen/x-screen.css" rel="stylesheet">
     <link href="../../x-toast/x-toast.css" rel="stylesheet">
 </head>
 
