Fix import names

--- a/screen-backup-phrase-validate/demo/index.html
+++ b/screen-backup-phrase-validate/demo/index.html
@@ -10,7 +10,7 @@
     <screen-backup-phrase-validate></screen-backup-phrase-validate>
     <script type="module">
     import ScreenBackupPhraseValidate from '../screen-backup-phrase-validate.js';
-    import MnemonicPhrase from '/libraries/mnemonic-phrase/mnemonic-phrase.es6.min.js';
+    import MnemonicPhrase from '/libraries/mnemonic-phrase/mnemonic-phrase.min.js';
  
     const $screen = new ScreenBackupPhraseValidate();
 
