--- a/x-mnemonic-input/demo/index.html
+++ b/x-mnemonic-input/demo/index.html
@@ -9,7 +9,7 @@
     <style>
     html,
     body {
-        height: 100%;
+        min-height: 100%;
         width: 100%;
         color: white;
         margin: 0;
