--- a/x-password-input/demo/index.html
+++ b/x-password-input/demo/index.html
@@ -6,9 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <link href="../x-password-input.css" rel="stylesheet">
     <link href="../../x-toast/x-toast.css" rel="stylesheet">
+    <link href="/libraries/nimiq-style/nimiq-style.css" rel="stylesheet">
+    <link href="/elements/x-screen/x-screen.css" rel="stylesheet">
 </head>
 
-<body>
+<body class="x-screen-fit">
     <x-password-input></x-password-input>
     <script type="module">
         import XPasswordInput from "../x-password-input.js";
