--- a/x-address/demo/index.html
+++ b/x-address/demo/index.html
@@ -4,17 +4,13 @@
 <head>
     <title>x-address demo</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; img-src https: data:; child-src 'none';">
     <link href="../x-address.css" rel="stylesheet">
 </head>
 
 <body>
     <x-address></x-address>
-    <script type="module">
-        import XAddress from "../x-address.js";
-        const address = 'NQ52 R00E 3NKS DXH5 53U3 RK0V S7V4 LEH0 QV64';
-        const $address = new XAddress();
-        $address.address = address;
-    </script>
+    <script type="module" src="./index.js"></script>
 </body>
 
 </html>
