--- a/x-pinpad/demo/index.html
+++ b/x-pinpad/demo/index.html
@@ -4,25 +4,13 @@
 <head>
     <title>x-pinpad</title>
     <link href="../x-pinpad.css" rel="stylesheet">
-    <style type="text/css">
-    body {
-        background: var(--primary-background);
-        height: 100vh;
-        display: flex;
-        justify-content: center;
-    }
-    </style>
+    <link href="./demo.css" rel="stylesheet">
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; img-src https: data:; child-src 'none';">
 </head>
 
 <body>
-    <x-pinpad></x-pinpad>
-    <script type="module">
-        import XPinpad from "../x-pinpad.js";
-        const $pinpad = new XPinpad();
-        $pinpad.open();
-        // simulate fail
-        addEventListener('x-pin', e => $pinpad.onPinIncorrect());
-    </script>
+<x-pinpad></x-pinpad>
+<script type="module" src="index.js"> </script>
 </body>
 
 </html>
