debugging + refactoring to use event map

--- a/x-mnemonic-input/demo/index.html
+++ b/x-mnemonic-input/demo/index.html
@@ -20,6 +20,8 @@
         background: var(--primary-background);
     }
 
+    body > * { position: static; }
+
     p {
         text-align: center;
         line-height: 2;
