--- a/x-accounts/demo/index.html
+++ b/x-accounts/demo/index.html
@@ -26,43 +26,43 @@
     const demoAccounts = [
         {
             address: 'NQ57 2CTN 72AK GR4K P6FC 46HS SRPU MTF3 0AXF',
-            title: 'Account 1',
+            label: 'Account 1',
             balance: 238.12,
             secure: false
         },
         {
             address: 'NQ77 X5GR VCE5 AQYB J3YJ VE7V 15L2 8EXY ECYU',
-            title: 'Account 2',
+            label: 'Account 2',
             balance: 823434534.23423,
             secure: true
         },
         {
             address: 'NQ02 2Q42 7BVN F9NN RJE7 JLMP FKVC B00J THFD',
-            title: 'Main Account',
+            label: 'Main Account',
             balance: 23423.12,
             secure: true
         },
         {
             address: 'NQ91 GN8V XQV1 M779 8U1A VAKN 2YR9 XLAV FM53',
-            title: 'Account 3',
+            label: 'Account 3',
             balance: 0,
             secure: false
         },
         {
             address: 'NQ53 XEKU HUKG 7RA8 L2ER 6LYY 5NVN BQ3U FYNX',
-            title: 'Account 4',
+            label: 'Account 4',
             balance: 0,
             secure: false
         },
         {
             address: 'NQ25 D5PV 2N4H MBA0 1NNJ 46VQ 1FSV 9QT7 YL52',
-            title: 'Account 5',
+            label: 'Account 5',
             balance: 123.45678,
             secure: false
         },
         {
             address: 'NQ25 LL4U QTYX R48H 597P 29DH HV20 3C67 66CQ',
-            title: 'Last account',
+            label: 'Last account',
             balance: 9999,
             secure: true
         }
