Enable atomic html updates

--- a/x-accounts/demo/index.html
+++ b/x-accounts/demo/index.html
@@ -23,6 +23,7 @@
     import XAccounts from '../x-accounts.js';
     import XToast from '../../x-toast/x-toast.js';
     const $accounts = new XAccounts();
+    window.$accounts = $accounts;
     const demoAccounts = [
         {
             address: 'NQ57 2CTN 72AK GR4K P6FC 46HS SRPU MTF3 0AXF',
