--- a/x-toast/demo/index.html
+++ b/x-toast/demo/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Wallet Backup Demo</title>
+    <title>x-toast</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <link href="../x-toast.css" rel="stylesheet">
 </head>
