fix demo styles

--- a/mixin-modal/demo/index.html
+++ b/mixin-modal/demo/index.html
@@ -4,6 +4,7 @@
 <head>
     <title>mixin-modal</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+    <link href="/libraries/nimiq-style/nimiq-style.css" rel="stylesheet">
     <link href="../mixin-modal.css" rel="stylesheet">
 </head>
 
