--- a/x-mnemonic-input/demo/index.html
+++ b/x-mnemonic-input/demo/index.html
@@ -5,6 +5,7 @@
     <title>Mnemonic Input</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <!-- <script src="../autocomplete.js"></script> -->
+    <link href="/libraries/nimiq-style/nimiq-style.css" rel="stylesheet">
     <link href="../x-mnemonic-input.css" rel="stylesheet">
     <style>
     html,
