--- a/x-pinpad/demo/success.html
+++ b/x-pinpad/demo/success.html
@@ -4,14 +4,7 @@
 <head>
     <title>x-pinpad</title>
     <link href="../x-pinpad.css" rel="stylesheet">
-    <style type="text/css">
-    body {
-        background: var(--primary-background);
-        height: 100vh;
-        display: flex;
-        justify-content: center;
-    }
-    </style>
+    <link href="/libraries/nimiq-style/nimiq-style.css" rel="stylesheet">
 </head>
 
 <body>
