--- a/x-privacy-agent/demo/index.html
+++ b/x-privacy-agent/demo/index.html
@@ -5,14 +5,7 @@
     <title>x-pinpad</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <link href="../x-privacy-agent.css" rel="stylesheet">
-    <style type="text/css">
-    body {
-        background: var(--primary-background);
-        height: 100vh;
-        display: flex;
-        justify-content: center;
-    }
-    </style>
+    <link href="/libraries/nimiq-style/nimiq-style.css" rel="stylesheet">
 </head>
 
 <body>
