--- a/x-screen/demo/index.html
+++ b/x-screen/demo/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <title></title>
+    <link href="/libraries/nimiq-style/nimiq-style.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="../x-screen.css">
 </head>
 
