--- a/x-toast/demo/index.html
+++ b/x-toast/demo/index.html
@@ -4,6 +4,7 @@
 <head>
     <title>x-toast</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+    <link href="/libraries/nimiq-style/nimiq-style.css" rel="stylesheet">
     <link href="../x-toast.css" rel="stylesheet">
 </head>
 
