--- a/x-wallet-backup-import/demo/index.html
+++ b/x-wallet-backup-import/demo/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <title></title>
+    <link href="/libraries/nimiq-style/nimiq-style.css" rel="stylesheet">
     <link href="../x-wallet-backup-import.css" rel="stylesheet">
     <style>
     html,
