--- a/x-address/demo/index.html
+++ b/x-address/demo/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <meta http-equiv="Content-Security-Policy" content="default-src 'self'; img-src https: data:; child-src 'none';">
     <link href="../x-address.css" rel="stylesheet">
+    <link href="/libraries/nimiq-style/nimiq-style.css" rel="stylesheet">
 </head>
 
 <body>
