--- a/x-mnemonic-phrase/demo/index.html
+++ b/x-mnemonic-phrase/demo/index.html
@@ -4,6 +4,7 @@
 <head>
     <title>Mnemonic Phrase</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+    <link href="/libraries/nimiq-style/nimiq-style.css" rel="stylesheet">
     <link href="../x-mnemonic-phrase.css" rel="stylesheet">
     <style>
     html,
