--- a/x-pinpad/demo/index.html
+++ b/x-pinpad/demo/index.html
@@ -4,7 +4,7 @@
 <head>
     <title>x-pinpad</title>
     <link href="../x-pinpad.css" rel="stylesheet">
-    <link href="./demo.css" rel="stylesheet">
+    <link href="/libraries/nimiq-style/nimiq-style.css" rel="stylesheet">
     <meta http-equiv="Content-Security-Policy" content="default-src 'self'; img-src https: data:; child-src 'none';">
 </head>
 
