--- a/x-qr-encoder/demo/index.html
+++ b/x-qr-encoder/demo/index.html
@@ -4,6 +4,7 @@
 <head>
     <title>x-qr-encoder demo</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+    <link href="/libraries/nimiq-style/nimiq-style.css" rel="stylesheet">
     <link href="../x-qr-encoder.css" rel="stylesheet">
 </head>
 
