--- a/x-wallet-backup/demo/index.html
+++ b/x-wallet-backup/demo/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <title>Wallet Backup Demo</title>
+    <link href="/libraries/nimiq-style/nimiq-style.css" rel="stylesheet">
     <link href="../x-wallet-backup.css" rel="stylesheet">
     <style type="text/css">
     html,
