--- a/x-address-input/demo/index.html
+++ b/x-address-input/demo/index.html
@@ -4,6 +4,7 @@
 <head>
     <title>x-address-input demo</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+    <link href="/libraries/nimiq-style/nimiq-style.css" rel="stylesheet">
     <link href="../x-address-input.css" rel="stylesheet">
     <link href="../../x-toast/x-toast.css" rel="stylesheet">
 </head>
