x-identicon: render as image and add placeholder

--- a/x-send-transaction/demo/index.html
+++ b/x-send-transaction/demo/index.html
@@ -19,7 +19,7 @@
 <x-send-transaction></x-send-transaction>
 
 <script type="module">
-    import XSendTransaction from "../x-send-transactions.js";
+    import XSendTransaction from "../x-send-transaction.js";
     import XSendTransactionModal from "../x-send-transaction-modal.js";
 
     window.$sendTransaction = new XSendTransaction();
